@@ -75,18 +75,25 @@ int sound_lowlevel_init( const char *device, int *freqptr, int *stereoptr )
   }
 
   tmp = AUDIO_FORMAT_LINEAR16BIT;
-  if( ioctl( soundfd, AUDIO_SET_DATA_FORMAT, tmp ) < 0 ) {
+  if( settings_current.sound_force_8bit                ||
+      ioctl( soundfd, AUDIO_SET_DATA_FORMAT, tmp ) < 0    ) {
 
     /* try 8-bit - may be an 8-bit only device */
     tmp = AUDIO_FORMAT_LINEAR8BIT;
-    if( settings_current.sound_force_8bit                ||
-	ioctl( soundfd, AUDIO_SET_DATA_FORMAT, tmp ) < 0    ) {
+    if( ioctl( soundfd, AUDIO_SET_DATA_FORMAT, tmp ) < 0 ) {
       settings_current.sound = 0;
-      ui_error(
-        UI_ERROR_ERROR,
-	"Couldn't set sound device '%s' into either 16-bit or 8-bit mode",
-	device
-      );
+
+      if( settings_current.sound_force_8bit ) {
+	ui_error( UI_ERROR_ERROR,
+		  "Couldn't set sound device '%s' into 8-bit mode", device );
+      } else {
+	ui_error(
+	  UI_ERROR_ERROR,
+	  "Couldn't set sound device '%s' in either 16-bit or 8-bit mode",
+	  device
+	);
+      }
+
       close( soundfd );
       return 1;
     }
