@@ -859,3 +859,4 @@
 	 the +3e and SE, and allow autoload snaps to be .szx as well as
 	 .z80.
 20040525 sound/hpsound.c: update for 16-bit sound (Stuart Brady).
+20040527 sound/hpsound.c: further small update (Stuart Brady).
